testsuite/tests/rename/should_fail/T10781.stderr

T10781.hs:12:5: error:
    Not in scope: ‘Foo._name’
    No module named ‘Foo’ is imported.
